force-app/main/default/objects/Enhancements__c/Enhancements__c.object-meta.xml
<CustomObject>
    <label>Enhancement</label>
    <nameField>
        <label>Enhancement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enhancements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>