force-app/main/default/objects/Enhancements__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <inlineHelpText>Date when Stage was set to Approved</inlineHelpText>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>