force-app/main/default/objects/Enhancements__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <inlineHelpText>User who set Stage = Approved</inlineHelpText>
    <label>Approved By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>