force-app/main/default/objects/Enhancements__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <inlineHelpText>Tag / Descriptor used for grouping with like requests. (ie &quot;Accounts&quot;)</inlineHelpText>
    <label>Area</label>
    <length>75</length>
    <type>Text</type>
</CustomField>