force-app/main/default/objects/Enhancements__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <inlineHelpText>Date when Stage set to &quot;Complete&quot; (Populated Automatically)</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>