force-app/main/default/objects/Enhancements__c/fields/Created_by_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Name__c</fullName>
    <formula>CreatedBy.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Name</label>
    <type>Text</type>
</CustomField>