force-app/main/default/objects/Enhancements__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>Enter a due date to put this request on the roadmap.
Date may be updated as needed as project plans and priorities change.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>