force-app/main/default/objects/Enhancements__c/fields/EM_Description__c.field-meta.xml
<CustomField>
    <fullName>EM_Description__c</fullName>
    <label>EM Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>