force-app/main/default/objects/Enhancements__c/fields/EM_Solution__c.field-meta.xml
<CustomField>
    <fullName>EM_Solution__c</fullName>
    <inlineHelpText>You may use this field to enter a proposed initial solution.
Ultimately the field will be used to record the final solution or answer.</inlineHelpText>
    <label>EM Solution</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>