force-app/main/default/objects/Enhancements__c/fields/EM_Stage__c.field-meta.xml
<CustomField>
    <fullName>EM_Stage__c</fullName>
    <label>EM Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>User Acceptance</fullName>
            </value>
            <value>
                <fullName>Rejected/Withdrawn</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>