force-app/main/default/objects/Enhancements__c/fields/Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours__c</fullName>
    <inlineHelpText>May be used by your consultant or internally to estimate or record the time needed to address this request.</inlineHelpText>
    <label>Estimated Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>