force-app/main/default/objects/Enhancements__c/fields/Request_Support__c.field-meta.xml
<CustomField>
    <fullName>Request_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to request immediate action on this request.
The Assigned User will be notified of your request and will be in touch soon!</inlineHelpText>
    <label>Request Support</label>
    <type>Checkbox</type>
</CustomField>