force-app/main/default/objects/Enhancements__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Bug/Error</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Data Problem</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>RISK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>