force-app/main/default/objects/Enhancements__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <inlineHelpText>If this idea or issue can be found at a particular URL, please enter it here.
(ie. URL for a particular record or report within Salesforce, or to an App you are interested in.)</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>