force-app/main/default/objects/Enhancements__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>EM_Stage__c</columns>
    <columns>Area__c</columns>
    <columns>Priority__c</columns>
    <columns>NAME</columns>
    <columns>EM_Description__c</columns>
    <columns>EM_Solution__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>