force-app/main/default/objects/Enhancements__c/listViews/All_Closed.listView-meta.xml
<ListView>
    <fullName>All_Closed</fullName>
    <columns>EM_Stage__c</columns>
    <columns>Area__c</columns>
    <columns>Priority__c</columns>
    <columns>NAME</columns>
    <columns>EM_Description__c</columns>
    <columns>EM_Solution__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EM_Stage__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>All Closed</label>
</ListView>