force-app/main/default/objects/Enhancements__c/listViews/All_Open.listView-meta.xml
<ListView>
    <fullName>All_Open</fullName>
    <columns>Due_Date__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Area__c</columns>
    <columns>Priority__c</columns>
    <columns>EM_Stage__c</columns>
    <columns>EM_Description__c</columns>
    <columns>EM_Solution__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EM_Stage__c</field>
        <operation>notEqual</operation>
        <value>Rejected/Withdrawn,Completed</value>
    </filters>
    <label>All Open by Stage</label>
</ListView>